import kivy
from kivy.app import App
from kivy.uix.button import Button
from kivy.uix.label import Label
from kivy.uix.gridlayout import GridLayout
from kivy.uix.textinput import TextInput
from kivy.uix.boxlayout import BoxLayout
from kivy.uix.image import Image
from kivy.uix.scrollview import ScrollView
from kivy.core.window import Window
from kivy.uix.dropdown import DropDown
from kivy.uix.button import Button

class Interface(App):
    def build(self):
        self.title = 'Boccia AR App'
        layout = BoxLayout(orientation='vertical')

        # Add image widget for AR visualization
        self.image = Image()
        layout.add_widget(self.image)

        # Add button for initiating object recognition
        recognition_button = Button(text='Start Recognition')
        recognition_button.bind(on_press=self.start_recognition)
        layout.add_widget(recognition_button)

        # Add label for displaying measurements
        self.measurements_label = Label()
        layout.add_widget(self.measurements_label)

        # Add button for accessing ordered list of boccia balls
        list_button = Button(text='Show Ordered List')
        list_button.bind(on_press=self.show_ordered_list)
        layout.add_widget(list_button)

        return layout

    def start_recognition(self, instance):
        # TODO: Implement object recognition
        pass

    def show_ordered_list(self, instance):
        # TODO: Implement display of ordered list of boccia balls
        pass

    def update_image(self, image):
        # TODO: Update the image widget with the given image
        pass

    def update_measurements(self, measurements):
        # TODO: Update the measurements label with the given measurements
        pass
